test/Parse/constinitialized_no_feature.code
// RUN: %target-typecheck-verify-language
@constInitialized immutable x: Int = 42 // expected-error{{'constInitialized' attribute is only valid when experimental feature CompileTimeValues is enabled}}
